--- a/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Address.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Shared/EditorTemplates/Address.cshtml
@@ -17,7 +17,7 @@
                         $.each(data, function(id, option) {
                             ddlStates.append($('<option></option>').val(option.id).html(option.name));
                         });
-                        ddlStates.trigger("change"); // codehint: sm-add
+                        ddlStates.trigger("change");
                     },
                     error: function(xhr, ajaxOptions, thrownError) {
                         alert('Failed to retrieve states.');
