--- a/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Int32.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/EditorTemplates/Int32.cshtml
@@ -1,21 +1,19 @@
-@using Telerik.Web.Mvc.UI
+﻿@using Telerik.Web.Mvc.UI
 
-@* codehing: sm-add *@
 @functions{
-    private decimal? Value
+    private int? Value
     {
         get
         {
-            decimal? value = null;
+            int? value = null;
             if (ViewData.Model != null)
             {
-                value = Convert.ToDecimal(ViewData.Model, System.Globalization.CultureInfo.InvariantCulture);
+                value = Convert.ToInt32(ViewData.Model, System.Globalization.CultureInfo.InvariantCulture);
             }
             return value;
         }
     }
 }
-
 
 @{
     string additionalClass = string.Empty;
@@ -24,11 +22,9 @@
     }
 }
 
-@(Html.Telerik().NumericTextBox<decimal>()
+@(Html.Telerik().IntegerTextBox()
         .Name(ViewData.TemplateInfo.GetFullHtmlFieldName(string.Empty))
         .EmptyMessage(T("Common.EnterValue"))
         .Value(Value)
         .HtmlAttributes(new { @class = additionalClass })
-        .DecimalDigits(4)   //always display 4 digits
 )
-
