--- a/src/Presentation/SmartStore.Web/Content/bootstrap/forms.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/forms.less
@@ -89,6 +89,11 @@ input[type="color"],
   vertical-align: middle;
 }
 
+select {
+	padding-top: 0;
+	padding-bottom: 0;
+}
+
 // Reset appearance properties for textual inputs and textarea
 // Declare width for legacy (can't be on input[type=*] selectors or it's too specific)
 input,
