--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericPaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericPaymentInfo.cshtml
@@ -4,10 +4,6 @@
 	Layout = "";
 }
 
-<table cellpadding="0" cellspacing="0" style="width: 100%">
-	<tr>
-		<td>
-			@Html.Raw(Model.DescriptionText)
-		</td>
-	</tr>
-</table>
+<div class="muted">
+	@Html.Raw(Model.DescriptionText)
+</div>
