--- a/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/PaymentInfo.cshtml
+++ b/src/Plugins/SmartStore.PayPal/Views/PayPalStandard/PaymentInfo.cshtml
@@ -3,9 +3,11 @@
 }
 @using SmartStore.Web.Framework;
 
-<div class="clearfix paypal-standard-public">
-	<img src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" class="logo" />
-	<span>
-		@T("Plugins.Payments.PayPalStandard.Fields.RedirectionTip")
+<div class="media">
+	<span class="pull-left">
+		<img class="media-object img-responsive" src="@Url.Content("~/Plugins/SmartStore.PayPal/Content/images/logo200x53.png")" alt="PayPal" />
 	</span>
+	<div class="media-body">
+		@T("Plugins.Payments.PayPalStandard.Fields.RedirectionTip")
+	</div>
 </div>
