--- a/src/Presentation/SmartStore.Web/Content/bootstrap/type.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/type.less
@@ -35,7 +35,8 @@ cite {
 
 // Utility classes
 .muted {
-  color: @grayLight;
+  //color: @grayLight;
+  color: mix(@textColor, @bodyBackground, 54%);
 }
 .text-warning { color: @warningText; }
 a.text-warning:hover { color: darken(@warningText, 10%); }
