--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1000,7 +1000,6 @@ table.cart .cart-item-row .qty-input {
 	margin-top: 0;
 }
 
-
 .checkout-data .select-address-title,
 .checkout-data .enter-address-title {
 	padding:10px 10px 5px 0;
@@ -1029,36 +1028,6 @@ table.cart .cart-item-row .qty-input {
 .checkout-data .address-grid .address-item .address-box {
 	text-align:left;
 }
-.shipping-options .option-name label,
-.payment-methods .option-name label {
-	font-weight: bold;
-}
-.checkout-data .shipping-options,
-.checkout-data .payment-methods {
-	border: 1px solid #d7d7d7;
-}
- 
-
-
-
-.checkout-data .shipping-options .option-name,
-.checkout-data .payment-methods .option-name {
-	margin: 0 100px 0 190px;
-}
-.checkout-data .shipping-options .no-left-margin .option-name,
-.checkout-data .payment-methods .no-left-margin .option-name {
-	margin: 0 100px 0 0;
-}
-.checkout-data .shipping-options .branding,
-.checkout-data .payment-methods .branding {
-	width: 180px;
-	/*text-align: center;*/
-}
-.checkout-data .shipping-options .branding img,
-.checkout-data .payment-methods .branding img {
-	max-width: 180px;
-	max-height: 60px;
-}
 
 
 
@@ -1073,43 +1042,6 @@ table.cart .cart-item-row .qty-input {
 }
 .checkout-data .order-completed .select-button {
     padding-top: 15px;
-}
-
-.checkout-data .shipping-option-item,
-.checkout-data .payment-method-item {
-	padding: 10px 20px;
-	border-bottom: 1px solid #ccc;
-
-	.payment-method-name {
-		.text-overflow();
-	}
-
-	.payment-method-desc {
-		display: inline-block;
-		clear: left;
-	}
-}
-.shipping-option-item.odd,
-.payment-method-item.odd {
-	background: @alternateListItem;
-}
-.shipping-option-item.even,
-.payment-method-item.even {
-	background: #ffffff;
-}
-
-.checkout-data .shipping-option-item .option-description {
-	font-weight: normal;
-	display: block;
-}
-.checkout-data .shipping-option-item .shipping-fee,
-.checkout-data .payment-method-item .payment-fee  {
-	font-weight: bold;
-}
-
-.checkout-data .shipping-options .select-button,
-.checkout-data .payment-methods .select-button {
-	padding: 10px 20px;
 }
 
 .order-details-table .item-box {
@@ -1160,16 +1092,20 @@ table.cart .cart-item-row .qty-input {
 	float:left;
 	background:#fff;
 	border:1px solid #fff;
-	padding:2px 6px;
+	padding:2px 8px;
 	margin:0 5px 0 0;
-	font:bold 11px/14px arial, helvetica, sans-serif;
+	font-size: 11px;
+	line-height: 20px;
+	font-weight: bold;
 	color:#999;
 	border-radius: 4px;
 }
 .opc .step-title h2{
 	float:left;
 	margin:2px 0 0 2px;
-	font:bold 13px/16px Arial, Helvetica, sans-serif;
+	font-size: 14px;
+	line-height: 20px;
+	font-weight: bold;
 	color:#999;
 	text-transform:capitalize;
 }
@@ -1207,7 +1143,6 @@ table.cart .cart-item-row .qty-input {
 .opc .step{
 	border: 1px solid #d7d7d7;
 	border-top: 0;
-	background: lighten(@warningBackground, 4%);
 	padding: 15px 30px;
 	position: relative;
 }
