--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingMethod.cshtml
@@ -7,23 +7,13 @@
 
     //title
     Html.AddTitleParts(T("PageTitle.Checkout").Text);
-
-    string marginClass = " no-left-margin";
-    
-    for (int i = 0; i < Model.ShippingMethods.Count; i++)
-    {
-        var shippingMethod = Model.ShippingMethods[i];
-        
-        if(!String.IsNullOrEmpty(shippingMethod.BrandUrl))
-        {
-            marginClass = "";
-            break;
-        }
-    }    
+      
 }
+
 @section orderProgress{
     @Html.Action("CheckoutProgress", "Checkout", new { step = CheckoutProgressStep.Shipping })
 }
+
 <div class="page shipping-method-page">
     <div class="page-title">
         <h1>@T("Checkout.SelectShippingMethod")</h1>
@@ -32,76 +22,56 @@
         @using (Html.BeginForm())
         {
             @Html.Widget("checkout_shipping_method_top")
-            <div class="shipping-options">
+            <div class="opt-list shipping-options">
                 @if (Model.Warnings.Count == 0)
                 {
-                    <div>
-
-                        @for (int i = 0; i < Model.ShippingMethods.Count; i++)
-                        {
-                            var shippingMethod = Model.ShippingMethods[i];
-                            
-                            string cssClass = "line";
-                            if (i == 0) 
-                            {
-                                cssClass += " alpha";
-                            }
-                            if (i == Model.ShippingMethods.Count -1)
-                            {
-                                cssClass += " omega";
-                            }
-                            if (i % 2 == 0)
-                            {
-                                cssClass += " odd";
-                            }
-                            else
-                            {
-                                cssClass += " even";
-                            }
-                            cssClass += marginClass;
+                    for (int i = 0; i < Model.ShippingMethods.Count; i++)
+                    {
+                        var shippingMethod = Model.ShippingMethods[i];
                                 
-                            <div class="clearfix shipping-option-item @cssClass">
-                                <div class="branding pull-left">
-                                    @if (!String.IsNullOrEmpty(shippingMethod.BrandUrl))
-                                    {
-                                        <img src="@Url.Content(shippingMethod.BrandUrl)" />
-                                    }
-                                </div>
-                                <div class="shipping-fee pull-right text-success">
-                                    @shippingMethod.Fee
-                                </div>
-                                <div class="option-name">
-                                    <label for="shippingoption_@(i)" class="radio pull-left">
-                                        <input id="shippingoption_@(i)" type="radio" name="shippingoption" value="@(shippingMethod.Name)___@(shippingMethod.ShippingRateComputationMethodSystemName)" checked="@shippingMethod.Selected" />
-                                        
-                                        @shippingMethod.Name
-                                        @if (!String.IsNullOrEmpty(shippingMethod.Description))
-                                        {
-                                            <span class="option-description">
-                                                @Html.Raw(shippingMethod.Description)
-                                            </span>
-                                        }
-                                    </label>
-                                </div>
-                            </div>
-                        }
-                        <div class="select-button clearfix">
-                            <a class="btn pull-left" href="@Url.Action("ShippingAddress")">
-                                <i class="fa fa-caret-left"></i>&nbsp;
-                                @T("Common.Back")
-                            </a>    
-                            <input type="submit" name="nextstep" id="nextstep" style="display:none" />
-
-                            <button class="btn btn-warning pull-right shipping-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
-                                @T("Checkout.NextButton")
-                                &nbsp;<i class="fa fa-caret-right"></i>
-                            </button>
+                        <div class="opt-list-item@(shippingMethod.Selected ? " selected" : "") shipping-option-item">
+							<div class="opt-data">
+								@if (shippingMethod.FeeRaw != 0)
+								{
+									<div class="opt-fee shipping-fee pull-right text-success">
+										@shippingMethod.Fee
+									</div>
+								}
+								<div class="opt-control option-name">
+									<label for="shippingoption_@(i)" class="radio">
+										<input id="shippingoption_@(i)" type="radio" name="shippingoption" class="opt-radio"
+											   @Html.Attr("checked", "checked", shippingMethod.Selected)
+											   value="@(shippingMethod.Name)___@(shippingMethod.ShippingRateComputationMethodSystemName)" />
+										<span class="opt-name">@shippingMethod.Name</span>
+									</label>
+								</div>
+							</div>
+							@if (!String.IsNullOrEmpty(shippingMethod.Description))
+							{
+								<div class="opt-info muted shipping-option-description">
+									@if (!String.IsNullOrEmpty(shippingMethod.BrandUrl))
+									{
+										<div class="media">
+											<span class="pull-left">
+												<img class="media-object img-responsive" src="@Url.Content(shippingMethod.BrandUrl)" alt="@shippingMethod.Name" />
+											</span>
+											<div class="media-body">
+												@Html.Raw(shippingMethod.Description)
+											</div>
+										</div>
+									}
+									else
+									{
+										@Html.Raw(shippingMethod.Description)
+									}
+								</div>
+							}
                         </div>
-                    </div>
+                    }
                 }
                 else
                 {
-                    <div class="message-error">
+                    <div class="alert alert-error">
                         <ul>
                             @for (int i = 0; i < Model.Warnings.Count; i++)
                             {
@@ -111,14 +81,36 @@
                     </div>
                 }
             </div>
+			
+            <div class="select-button clearfix">
+                <a class="btn pull-left" href="@Url.Action("ShippingAddress")">
+                    <i class="fa fa-caret-left"></i>&nbsp;
+                    @T("Common.Back")
+                </a>    
+                <input type="submit" name="nextstep" id="nextstep" style="display:none" />
+
+                <button class="btn btn-warning pull-right shipping-method-next-step-button" onclick="$('#nextstep').trigger('click');return false;">
+                    @T("Checkout.NextButton")
+                    &nbsp;<i class="fa fa-caret-right"></i>
+                </button>
+            </div>
+			
             @Html.Widget("checkout_shipping_method_bottom")
         }
-
-        @*<div class="order-summary-title">
-            @T("Checkout.OrderSummary")
-        </div>
-        <div class="order-summary-body">
-            @Html.Action("OrderSummary", "ShoppingCart")
-        </div>*@
     </div>
 </div>
+
+<script>
+	$(function () {
+
+		$('.checkout-data .opt-radio').on('change', function (e) {
+			var radio = $(this);
+			var systemName = radio.val();
+
+			$('.checkout-data .opt-list-item').removeClass('selected');
+
+			var item = radio.closest('.opt-list-item');
+			item.addClass("selected");
+		});
+	});
+</script>
