* Added payment summary to checkout confirm page * Fixed payment plugin resources

--- a/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/Confirm.cshtml
@@ -134,7 +134,7 @@
                         });
                     </script>
                     
-                    <a class="btn pull-left" href="@Url.Action(Model.BypassPaymentMethodInfo ? "PaymentMethod" : "PaymentInfo")">
+                    <a class="btn pull-left" href="@Url.Action("PaymentMethod")">
                         <i class="fa fa-caret-left"></i>&nbsp;
                         @T("Common.Back")
                     </a>
