--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/_OrderReviewData.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/_OrderReviewData.cshtml
@@ -171,6 +171,10 @@
                     </div>
                     <div class="block-body">
                         @Model.PaymentMethod
+						@if (Model.PaymentSummary.HasValue())
+						{
+							<span class="muted">@Model.PaymentSummary</span>
+						}
                     </div>
                 </div>
             </div>
