--- a/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericConfigure.cshtml
+++ b/src/Plugins/SmartStore.OfflinePayment/Views/OfflinePayment/GenericConfigure.cshtml
@@ -14,7 +14,7 @@
 				@Html.SmartLabelFor(model => model.DescriptionText)
 			</td>
 			<td class="adminData">
-				@Html.TextAreaFor(model => model.DescriptionText, new { style = "Width: 550px; Height: 350px;" })
+				@Html.TextAreaFor(model => model.DescriptionText, new { style = "width: 550px; height: 100px;" })
 				@Html.ValidationMessageFor(model => model.DescriptionText)
 			</td>
 		</tr>
