--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.Mobile.cshtml
@@ -89,7 +89,7 @@
                                 <div class="buttons">
                                     @if (order.IsReturnRequestAllowed)
                                     {
-                                        <a href="@Url.RouteUrl("ReturnRequest", new { id = @order.Id })" data-role="button">@T("Account.CustomerOrders.ReturnItems")</a>
+                                        <a href="@Url.RouteUrl("ReturnRequest", new { orderId = order.Id })" data-role="button">@T("Account.CustomerOrders.ReturnItems")</a>
                                     }
 									<a href="@Url.Action("Details", "Order", new { id = order.Id })" data-role="button">@T("Account.CustomerOrders.OrderDetails")</a>
                                 </div>
