Theme Inheritance (initial)

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1264,6 +1264,8 @@ table.payment-method-features td {
 #theme-list .theme-line .preview-image {
 	width: 300px; 
 	margin-right: 16px;
+
+	img { width: 290px; min-height: 250px }
 }
 #theme-list .theme-line .theme-name {
 	font-size: 22px;
