--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/List.cshtml
@@ -97,7 +97,7 @@
                         <img src="@Url.Content(theme.PreviewImageUrl)" class="img-polaroid" />
                     </div>
                     <div class="pull-left">
-                        <div class="theme-name">@T("Admin.Configuration.Themes.Name"): @(theme.Title ?? theme.Name)</div>
+                        <div class="theme-name">@(theme.Title ?? theme.Name)</div>
                         <div>@T("Admin.Configuration.Themes.Description"): @theme.Description</div>
                         <div>@T("Admin.Configuration.Themes.Author"): @theme.Author</div>
                         <div>@T("Admin.Configuration.Themes.Version"): @theme.Version</div>
